# Portfolio

./: .gitignore  README.md
Cplusplus/: CMakeCache.txt  CMakeLists.txt  CPlusPlusConfig.h  CPlusPlusConfig.h.in  build.bat  main.cpp  mainwindow.cpp  mainwindow.h
Cplusplus/conan/: conanfile.py  conanfile.txt  debug_profile.txt  old_conanfile.txt  profile.txt  profiled.txt  release_profile.txt
Cplusplus/src/: CMakeLists.txt
Cplusplus/src/solutions/: CMakeLists.txt  PointInPolygon.cpp  PointInPolygon.h
Cplusplus/src/userinterface/: CMakeLists.txt
Cplusplus/src/userinterface/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Cplusplus/src/userinterface/MyApp/: MyApp.cpp  MyApp.h
Cplusplus/src/utils/: CMakeLists.txt  utils.cpp  utils.h
Cplusplus/src/utils/Coordinates/: CMakeLists.txt  Line.cpp  Line.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h
Cplusplus/src/utils/StringUtils/: CMakeLists.txt  StringUtils.cpp  StringUtils.h
Cplusplus/src/utils/TestingUtils/: CMakeLists.txt  MyTestCase.cpp  MyTestCase.h
Cplusplus/tests/: CMakeLists.txt
Cplusplus/tests/test_Solutions/: CMakeLists.txt  test_PointInPolygon.cpp  test_PointInPolygon.h
Cplusplus/tests/test_UserInterface/: CMakeLists.txt
Cplusplus/tests/test_Utils/: CMakeLists.txt
Cplusplus/tests/test_Utils/test_Coordinates/: CMakeLists.txt  test_Line.cpp  test_Line.h  test_Point.cpp  test_Point.h  test_Polygon.cpp  test_Polygon.h
Cplusplus/tests/test_Utils/test_StringUtils/: CMakeLists.txt  test_StringUtils.cpp  test_StringUtils.h
DotNetCSharp/: DotNetCSharp.sln
DotNetCSharp/Coordinates/: Coordinates.cs
DotNetCSharp/DotNetCSharpApp/: App.xaml  App.xaml.cs  DotNetCSharpApp.csproj  MainWindow.xaml  MainWindow.xaml.cs
DotNetCSharp/TestCoordinates/: TestCoordinates.csproj  UnitTestCoordinates.cs
Python/: definitions.py  error.py  main.py  test_main.py
Python/solutions/point_in_polygon/: generate_test_data.py  input.in  output.ans  solution.py  test_point_in_polygon.py
Python/src/utils/: MyTestCase.py  coordinates.py  generate_test_data.py  shapes.py  test_coordinates.py
Python/testing/: MyTestCase.py  generate_test_data.py  test_coordinates.py  test_point_in_polygon.py
